Migrate code from old site

--- a/index.html
+++ b/index.html
@@ -1,30 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>@rocity</title>
-    <style>
-        html {
-            background: #7DB1B1;
-            padding-top: 30px;
-        }
-        body {
-            font-family: sans-serif;
-            text-align: center;
-            color: #F5F7FA;
-        }
-        small {
-            display: block;
-            font-size: 9px;
-            font-style: italic;
-        }
-        small a {
-            color: #A0CECB;
-        }
-    </style>
+
+    <meta charset="utf-8">
+
+    <!-- Behavioral Meta Data -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <!-- Core Meta Data -->
+    <meta name="author" content="Kevin Paul Kalis">
+    <meta name="description" content="Github Page of Kevin Kalis">
+    <meta name="keywords" content="Kevin Paul Kalis, web development, life, web design, KVNPL, blog">
+
+    <!-- Open Graph Meta Data -->
+    <meta property="og:description" content="Github Page of Kevin Kalis">
+    <meta property="og:image" content="./assets/img/kvnpl.png">
+    <meta property="og:site_name" content="KVNPL">
+    <meta property="og:title" content="KVNPL">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://kvnpl.xyz/index.html">
+
+    <!-- Twitter Card Meta Data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="http://kvnpl.xyz/index.html">
+    <meta name="twitter:creator" content="@iamkvnpl">
+    <meta name="twitter:title" content="KVNPL">
+    <meta name="twitter:description" content="Github Page of Kevin Kalis">
+    <meta name="twitter:image" content="./assets/img/kvnpl.png">
+
+    <title>Home | @rocity</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <!-- Styles -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css"/>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
-    <body>
-        <img src="./assets/img/lil-bub-medium.jpg" alt="Lil Bub">
-        <small>Lil Bub &mdash; Displaying a threatening pose to drive predators away. [<a href="https://en.wikipedia.org/wiki/Cats_and_the_Internet">source</a>]</small>
-        <h1>Site under construction. Come check again later.</h1>
-    </body>
+<body>
+    <h1 class="hidden">Kevin Paul Kalis</h1>
+    <h2 class="hidden">Web Development. BS Computer Science. Philippines.</h2>
+    <div id="container" class="container">
+    </div>
+    <div id="front">
+        <img src="./assets/img/kvnpl.png"><br>
+        <a href="https://twitter.com/@iamkvnpl" title="Twitter" class="tt tw ghost-button-semi-transparent">
+            <i class="fa fa-twitter"></i>
+        </a>
+        <a href="https://github.com/rocity" title="GitHub" class="tt git ghost-button-semi-transparent">
+            <i class="fa fa-github"></i>
+        </a>
+        <a href="http://stackoverflow.com/users/2331182/burning-crystals" title="Stack Overflow" class="tt so ghost-button-semi-transparent">
+            <i class="fa fa-stack-overflow"></i>
+        </a>
+        <a href="#" title="Blog (Inactive)" class="tt bl ghost-button-semi-transparent">
+            <i class="fa fa-lightbulb-o"></i>
+        </a>
+    </div>
+    <div id="foot" class="text-center">
+        <small>#madeindavao</small><br />
+        <small>Copyright &copy; Kevin Paul Kalis 2016 All Rights Reserved.</small>
+    </div>
+    <!-- Scripts -->
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+
+
+</body>
 </html>
