Update metas and display image

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
     <!-- Open Graph Meta Data -->
     <meta property="og:description" content="Github Page of Kevin Kalis">
-    <meta property="og:image" content="./assets/img/kvnpl.png">
+    <meta property="og:image" content="./assets/img/rocity.png">
     <meta property="og:site_name" content="KVNPL">
     <meta property="og:title" content="KVNPL">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://kvnpl.xyz/index.html">
+    <meta property="og:url" content="https://rocity.github.io/index.html">
 
     <!-- Twitter Card Meta Data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="http://kvnpl.xyz/index.html">
+    <meta name="twitter:site" content="https://rocity.github.io/index.html">
     <meta name="twitter:creator" content="@iamkvnpl">
     <meta name="twitter:title" content="KVNPL">
     <meta name="twitter:description" content="Github Page of Kevin Kalis">
-    <meta name="twitter:image" content="./assets/img/kvnpl.png">
+    <meta name="twitter:image" content="./assets/img/rocity.png">
 
     <title>Home | @rocity</title>
     <link rel="icon" type="image/png" href="favicon.png">
@@ -44,7 +44,7 @@
     <div id="container" class="container">
     </div>
     <div id="front">
-        <img src="./assets/img/kvnpl.png"><br>
+        <img src="./assets/img/rocity.png"><br>
         <a href="https://twitter.com/@iamkvnpl" title="Twitter" class="tt tw ghost-button-semi-transparent">
             <i class="fa fa-twitter"></i>
         </a>
