--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <meta property="og:site_name" content="KVNPL">
     <meta property="og:title" content="KVNPL">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rocity.github.io/index.html">
+    <meta property="og:url" content="http://rocity.pw/index.html">
 
     <!-- Twitter Card Meta Data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="https://rocity.github.io/index.html">
+    <meta name="twitter:site" content="http://rocity.pw/index.html">
     <meta name="twitter:creator" content="@iamkvnpl">
     <meta name="twitter:title" content="KVNPL">
     <meta name="twitter:description" content="Github Page of Kevin Kalis">
@@ -58,6 +58,7 @@
             <i class="fa fa-lightbulb-o"></i>
         </a>
     </div>
+    <p class="text-center"><small>Blog under maintenance. Will write something soon. <em>8.29.2016</em></small></p>
     <div id="foot" class="text-center">
         <small>#madeindavao</small><br />
         <small>Copyright &copy; Kevin Paul Kalis 2016 All Rights Reserved.</small>
