Update responsive styles

--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 
     <!-- Core Meta Data -->
     <meta name="author" content="Kevin Paul Kalis">
-    <meta name="description" content="Github Page of Kevin Kalis">
-    <meta name="keywords" content="Kevin Paul Kalis, web development, life, web design, KVNPL, blog">
+    <meta name="description" content="Kevin Kalis. Web Developer.">
+    <meta name="keywords" content="Kevin Paul Kalis, web development, life, web design, ROCITY, blog">
 
     <!-- Open Graph Meta Data -->
-    <meta property="og:description" content="Github Page of Kevin Kalis">
+    <meta property="og:description" content="Kevin Kalis. Web Developer.">
     <meta property="og:image" content="./assets/img/rocity.png">
-    <meta property="og:site_name" content="KVNPL">
-    <meta property="og:title" content="KVNPL">
+    <meta property="og:site_name" content="ROCITY">
+    <meta property="og:title" content="ROCITY">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://rocity.pw/index.html">
+    <meta property="og:url" content="http://rocity.pw/">
 
     <!-- Twitter Card Meta Data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="http://rocity.pw/index.html">
+    <meta name="twitter:site" content="http://rocity.pw/">
     <meta name="twitter:creator" content="@iamkvnpl">
-    <meta name="twitter:title" content="KVNPL">
-    <meta name="twitter:description" content="Github Page of Kevin Kalis">
+    <meta name="twitter:title" content="ROCITY">
+    <meta name="twitter:description" content="Kevin Kalis. Web Developer.">
     <meta name="twitter:image" content="./assets/img/rocity.png">
 
     <title>Home | @rocity</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css"/>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -41,10 +41,11 @@
 <body>
     <h1 class="hidden">Kevin Paul Kalis</h1>
     <h2 class="hidden">Web Development. BS Computer Science. Philippines.</h2>
-    <div id="container" class="container">
-    </div>
-    <div id="front">
-        <img src="./assets/img/rocity.png"><br>
+    <div class="clearfix"></div>
+    <div id="wrapper" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-3">
+        <p class="text-center">
+            <img id="master-image" src="./assets/img/rocity.png">
+        </p>
         <a href="https://twitter.com/@iamkvnpl" title="Twitter" class="tt tw ghost-button-semi-transparent">
             <i class="fa fa-twitter"></i>
         </a>
@@ -57,8 +58,11 @@
         <a href="#" title="Blog (Inactive)" class="tt bl ghost-button-semi-transparent">
             <i class="fa fa-lightbulb-o"></i>
         </a>
+        <hr>
+        <p class="text-center">
+            <small>Blog under maintenance. Will write something soon. <em>8.29.2016</em></small>
+        </p>
     </div>
-    <p class="text-center"><small>Blog under maintenance. Will write something soon. <em>8.29.2016</em></small></p>
     <div id="foot" class="text-center">
         <small>#madeindavao</small><br />
         <small>Copyright &copy; Kevin Paul Kalis 2016 All Rights Reserved.</small>
