--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
 
     <!-- Core Meta Data -->
     <meta name="author" content="Kevin Paul Kalis">
-    <meta name="description" content="Kevin Kalis. Web Developer.">
+    <meta name="description" content="About Kevin Kalis. Web Developer.">
     <meta name="keywords" content="Kevin Paul Kalis, web development, life, web design, ROCITY, blog">
 
     <!-- Open Graph Meta Data -->
-    <meta property="og:description" content="Kevin Kalis. Web Developer.">
+    <meta property="og:description" content="About Kevin Kalis. Web Developer.">
     <meta property="og:image" content="./assets/img/rocity.png">
     <meta property="og:site_name" content="ROCITY">
     <meta property="og:title" content="ROCITY">
@@ -26,10 +26,10 @@
     <meta name="twitter:site" content="http://rocity.pw/">
     <meta name="twitter:creator" content="@iamkvnpl">
     <meta name="twitter:title" content="ROCITY">
-    <meta name="twitter:description" content="Kevin Kalis. Web Developer.">
+    <meta name="twitter:description" content="About Kevin Kalis. Web Developer.">
     <meta name="twitter:image" content="./assets/img/rocity.png">
 
-    <title>Home | @rocity</title>
+    <title>About | @rocity</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css"/>
@@ -39,30 +39,37 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1 class="hidden">Kevin Paul Kalis</h1>
-    <h2 class="hidden">Web Development. BS Computer Science. Philippines.</h2>
+
     <div class="clearfix"></div>
-    <div id="wrapper" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-3">
-        <p class="text-center">
-            <img id="master-image" src="./assets/img/rocity.png">
-        </p>
-        <a href="https://twitter.com/@iamkvnpl" title="Twitter" class="tt tw ghost-button-semi-transparent">
-            <i class="fa fa-twitter"></i>
-        </a>
-        <a href="https://github.com/rocity" title="GitHub" class="tt git ghost-button-semi-transparent">
-            <i class="fa fa-github"></i>
-        </a>
-        <a href="http://stackoverflow.com/users/2331182/burning-crystals" title="Stack Overflow" class="tt so ghost-button-semi-transparent">
-            <i class="fa fa-stack-overflow"></i>
-        </a>
-        <a href="#" title="Blog (Inactive)" class="tt bl ghost-button-semi-transparent">
-            <i class="fa fa-lightbulb-o"></i>
-        </a>
-        <hr>
-        <p class="text-center">
-            <small>Blog under maintenance. Will write something soon. <em>8.29.2016</em></small>
-        </p>
+    
+    <div id="about" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-3">
+        <h1>About Kevin</h1>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="about-text">
+                    <p>
+                        A computer science graduate with a keen eye for detail seeking a fulfilling position in web development which will utilize his problem solving skills and programming skills developed through his experience in past jobs.
+                    </p>
+
+                    <p>
+                        Kevin loves working closely with clients to bring in great features as well as identify and fix problems efficiently. Has a logical approach to problem solving which enables him to analyze situations and deliver solutions quickly. He enjoys working on his own or in a team where he can rely and learn from. The opportunity to learn more about web development and to work in its technologies is particularly attractive to him.
+                    </p>
+
+                    <p>
+                        Started learning to ride the skateboard and contribute to open-source software.
+                    </p>
+                
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <img
+                        class="img-responsive"
+                        src="./assets/img/kev_2016.jpg"
+                        alt="Kevin's portrait">
+            </div>
+        </div>
     </div>
+
     <div id="foot" class="text-center">
         <small>#madeindavao | <a href="./about.html">about</a> | <a href="./index.html">home</a></small>
         <br />
