Fix footer not being sticky

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
     <div class="clearfix"></div>
     
-    <div id="about" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-3">
+    <div id="about">
         <h1>About Kevin</h1>
         <div class="row">
             <div class="col-xs-6">
