--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h1 class="hidden">Kevin Paul Kalis</h1>
     <h2 class="hidden">Web Development. BS Computer Science. Philippines.</h2>
     <div class="clearfix"></div>
-    <div id="wrapper" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-3">
+    <div id="wrapper">
         <p class="text-center">
             <img id="master-image" src="./assets/img/rocity.png">
         </p>
