Open links in new tab

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <p class="text-center">
             <img id="master-image" src="./assets/img/rocity.png">
         </p>
-        <a href="https://twitter.com/@iamkvnpl" title="Twitter" class="tt tw ghost-button-semi-transparent">
+        <a target="_blank" href="https://twitter.com/@iamkvnpl" title="Twitter" class="tt tw ghost-button-semi-transparent">
             <i class="fa fa-twitter"></i>
         </a>
-        <a href="https://github.com/rocity" title="GitHub" class="tt git ghost-button-semi-transparent">
+        <a target="_blank" href="https://github.com/rocity" title="GitHub" class="tt git ghost-button-semi-transparent">
             <i class="fa fa-github"></i>
         </a>
-        <a href="http://stackoverflow.com/users/2331182/burning-crystals" title="Stack Overflow" class="tt so ghost-button-semi-transparent">
+        <a target="_blank" href="http://stackoverflow.com/users/2331182/burning-crystals" title="Stack Overflow" class="tt so ghost-button-semi-transparent">
             <i class="fa fa-stack-overflow"></i>
         </a>
         <a href="#" title="Blog (Inactive)" class="tt bl ghost-button-semi-transparent">
